# GenericThreadPoolProducerConsumerPattern

./: .gitignore  CMakeLists.txt  GenericThreadPoolProducerConsumerPattern.sln  README.md
.github/workflows/: msbuild.yml
GenericThreadPoolProducerConsumerPattern/: CMakeLists.txt  Consumer.h  GenericThreadPoolProducerConsumerPattern.vcxproj  GenericThreadPoolProducerConsumerPattern.vcxproj.filters  ITask.h  Producer.h  ThreadPool.cpp  ThreadPool.h  Worker.cpp  Worker.h
Test/: CMakeLists.txt  Test.vcxproj  pch.h  test.cpp
